// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SubtractionDetail /> > should not render icons when [canModify=false] 1`] = `
<Fragment>
  <ViewHeader
    title="Foo"
  >
    <ViewHeaderTitle>
      Foo
    </ViewHeaderTitle>
  </ViewHeader>
  <Table>
    <tbody>
      <tr>
        <th>
          Nickname
        </th>
        <td>
          foo-nickname
        </td>
      </tr>
      <tr>
        <th>
          File
        </th>
        <td>
          Foo.fa.gz
        </td>
      </tr>
      <tr>
        <th>
          Sequence Count
        </th>
        <td />
      </tr>
      <tr>
        <th>
          GC Estimate
        </th>
        <td>
          0.400
        </td>
      </tr>
      <tr>
        <th>
          Linked Samples
        </th>
        <td>
          2
        </td>
      </tr>
    </tbody>
  </Table>
  <Connect(SubtractionFiles) />
  <Connect(EditSubtraction)
    onHide={[Function]}
    show={false}
    subtraction={
      {
        "file": {
          "id": "123-Foo.fa.gz",
          "name": "Foo.fa.gz",
        },
        "gc": {
          "a": 0.2,
          "c": 0.2,
          "g": 0.2,
          "n": 0.2,
          "t": 0.2,
        },
        "id": "foo",
        "linked_samples": [
          {
            "id": "bar",
            "name": "Bar",
          },
          {
            "id": "baz",
            "name": "Baz",
          },
        ],
        "name": "Foo",
        "nickname": "foo-nickname",
        "ready": true,
      }
    }
  />
  <Connect(RemoveSubtraction) />
</Fragment>
`;

exports[`<SubtractionDetail /> > should render 1`] = `
<Fragment>
  <ViewHeader
    title="Foo"
  >
    <ViewHeaderTitle>
      Foo
      <ViewHeaderIcons>
        <Icon
          color="orange"
          name="pencil-alt"
          onClick={[Function]}
        />
        <Icon
          color="red"
          name="trash"
          onClick={[MockFunction spy]}
        />
      </ViewHeaderIcons>
    </ViewHeaderTitle>
  </ViewHeader>
  <Table>
    <tbody>
      <tr>
        <th>
          Nickname
        </th>
        <td>
          foo-nickname
        </td>
      </tr>
      <tr>
        <th>
          File
        </th>
        <td>
          Foo.fa.gz
        </td>
      </tr>
      <tr>
        <th>
          Sequence Count
        </th>
        <td />
      </tr>
      <tr>
        <th>
          GC Estimate
        </th>
        <td>
          0.400
        </td>
      </tr>
      <tr>
        <th>
          Linked Samples
        </th>
        <td>
          2
        </td>
      </tr>
    </tbody>
  </Table>
  <Connect(SubtractionFiles) />
  <Connect(EditSubtraction)
    onHide={[Function]}
    show={false}
    subtraction={
      {
        "file": {
          "id": "123-Foo.fa.gz",
          "name": "Foo.fa.gz",
        },
        "gc": {
          "a": 0.2,
          "c": 0.2,
          "g": 0.2,
          "n": 0.2,
          "t": 0.2,
        },
        "id": "foo",
        "linked_samples": [
          {
            "id": "bar",
            "name": "Bar",
          },
          {
            "id": "baz",
            "name": "Baz",
          },
        ],
        "name": "Foo",
        "nickname": "foo-nickname",
        "ready": true,
      }
    }
  />
  <Connect(RemoveSubtraction) />
</Fragment>
`;

exports[`<SubtractionDetail /> > should render file id when name not defined 1`] = `
<Fragment>
  <ViewHeader
    title="Foo"
  >
    <ViewHeaderTitle>
      Foo
      <ViewHeaderIcons>
        <Icon
          color="orange"
          name="pencil-alt"
          onClick={[Function]}
        />
        <Icon
          color="red"
          name="trash"
          onClick={[MockFunction spy]}
        />
      </ViewHeaderIcons>
    </ViewHeaderTitle>
  </ViewHeader>
  <Table>
    <tbody>
      <tr>
        <th>
          Nickname
        </th>
        <td>
          foo-nickname
        </td>
      </tr>
      <tr>
        <th>
          File
        </th>
        <td>
          123-Foo.fa.gz
        </td>
      </tr>
      <tr>
        <th>
          Sequence Count
        </th>
        <td />
      </tr>
      <tr>
        <th>
          GC Estimate
        </th>
        <td>
          0.400
        </td>
      </tr>
      <tr>
        <th>
          Linked Samples
        </th>
        <td>
          2
        </td>
      </tr>
    </tbody>
  </Table>
  <Connect(SubtractionFiles) />
  <Connect(EditSubtraction)
    onHide={[Function]}
    show={false}
    subtraction={
      {
        "file": {
          "id": "123-Foo.fa.gz",
        },
        "gc": {
          "a": 0.2,
          "c": 0.2,
          "g": 0.2,
          "n": 0.2,
          "t": 0.2,
        },
        "id": "foo",
        "linked_samples": [
          {
            "id": "bar",
            "name": "Bar",
          },
          {
            "id": "baz",
            "name": "Baz",
          },
        ],
        "name": "Foo",
        "nickname": "foo-nickname",
        "ready": true,
      }
    }
  />
  <Connect(RemoveSubtraction) />
</Fragment>
`;

exports[`<SubtractionDetail /> > should render loading when [detail=null] 1`] = `<LoadingPlaceholder />`;

exports[`<SubtractionDetail /> > should render not found on request error 1`] = `<NotFound />`;

exports[`<SubtractionDetail /> > should render pending message when subtraction is not ready 1`] = `
<LoadingPlaceholder
  message="Subtraction is still being imported"
/>
`;
